--- a/code/app/static/css/dashboard.css
+++ b/code/app/static/css/dashboard.css
@@ -29,8 +29,15 @@ ul li {
 
 .card-title {
     text-align:left; 
-    padding-top: 20px;
+    padding-top: 15px;
     color: #376b69;
 }    
 
 
+.card-text{
+    text-align:left; 
+    padding-top: 6px;
+    padding-bottom: 3px;
+    line-height: 2 ;
+    
+}
