fixed buttons and datatables

--- a/code/app/templates/agency.html
+++ b/code/app/templates/agency.html
@@ -92,10 +92,10 @@
                                                 {% for k in table_keys %}
                                                     <td class="align-middle">{{patient[k]}}</td>
                                                 {% endfor %}
-                            <td width="5%"><button type="button" class="btn-two green rounded small" onclick="ga('send', 'event', ['button'], ['Confirmation']);respondRequest({{patient['request_id']}}, 'C');return false;">
+                            <td width="5%"><button type="button" class="btn-two green rounded small" onclick="respondRequest({{patient['request_id']}}, 'C');return false;ga('send', 'event', ['button'], ['Confirmation']);">
                                                     Confirm
                                                 </button></td>
-                            <td width="5%"><button type="button" class="btn-two red rounded small" onclick="ga('send', 'event', ['button'], ['Denial']);respondRequest({{patient['request_id']}}, 'D');return false;">
+                            <td width="5%"><button type="button" class="btn-two red rounded small" onclick="ga('send', 'event', ['button'], ['Denial']);respondRequest({{patient['request_id']}}, 'D');return false;ga('send', 'event', ['button'], ['Confirmation']);">
                                                     Deny
                                                 </button></td>
                                                 <td width="5%"><button type="button" class="btn-two blue rounded small">
@@ -205,7 +205,7 @@
     </body>
 <script>
     $('.display').DataTable({
-      responsive: false,
+      responsive: true,
         "bPaginate": false,
         "bLengthChange": false,
         "bFilter": true,
