--- a/code/app/templates/agency.html
+++ b/code/app/templates/agency.html
@@ -77,7 +77,7 @@
                         <div class="row">
                             <div class="container col-md-12 compare-table">
                                 <br>
-                                <table id="myTable1" style = "vertical-align:middle;font-family:Lato;font-weight:400;font-size:17" class="display table-hover table-striped" width="100%">
+                                <table id="myTable1" style = "vertical-align:middle;font-family:Lato;font-weight:400;font-size:17" class="table table-hover table-striped" width="100%">
                                     <thead>
                                         <tr>
                                             {% for col_name in table_keys %}
@@ -114,12 +114,14 @@
                     <form method="POST">
                         <div class="row">
                             <div class="container col-md-12 compare-table">
-                                <table id="myTable3" style = "vertical-align:middle;font-family:Lato;font-weight:400;font-size:17" class="display table-hover table-striped" width="100%">
+                                <table id="myTable2" style = "vertical-align:middle;font-family:Lato;font-weight:400;font-size:17" class="table table-hover table-striped" width="100%">
                                     <thead>
                                         <tr>
                                             {% for col_name in table_keys %}
                                                 <th scope="col">{{col_name}}</th>
                                             {% endfor %}
+                                            <th></th>
+
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -136,19 +138,20 @@
                                     </tbody>
                                 </table>
                             </div>
-                        </div>
+                        </div></form>
                     </div>
                 <!-- Accepted Pane -->
                 <div class="tab-pane" id="accepted" role="tabpanel" aria-labelledby="accepted-tab">
                     <form method="POST">
                         <div class="row">
                             <div class="container col-md-12 compare-table">
-                                <table id="myTable2" style = "vertical-align:middle;font-family:Lato;font-weight:400;font-size:17" class="display table-hover table-striped" width="100%">
+                                <table id="myTable3" style = "vertical-align:middle;font-family:Lato;font-weight:400;font-size:17" class="table table-hover table-striped" width="100%">
                                     <thead>
                                         <tr>
                                             {% for col_name in table_keys %}
                                                 <th scope="col">{{col_name}}</th>
                                             {% endfor %}
+                                            <th></th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -173,12 +176,13 @@
                     <form method="POST">
                         <div class="row">
                             <div class="container col-md-12 compare-table">
-                                <table id="myTable2" style = "vertical-align:middle;font-family:Lato;font-weight:400;font-size:17" class="display table-hover table-striped" width="100%">
+                                <table id="myTable4" style = "vertical-align:middle;font-family:Lato;font-weight:400;font-size:17" class="table table-hover table-striped" width="100%">
                                     <thead>
                                         <tr>
                                             {% for col_name in table_keys %}
                                                 <th scope="col">{{col_name}}</th>
                                             {% endfor %}
+                                            <th></th><th></th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -190,6 +194,9 @@
                                                 <td width="5%"><button type="button" class="btn-two blue rounded small">
                                                     View
                                                 </button></td>
+                                                 <td width="10%"><button type="button" class="btn-two green rounded small">
+                                                    Fill Form
+                                                </button></td>                                               
                                             </tr>
                                         {% endfor %}
                                     </tbody>
@@ -204,19 +211,51 @@
     <link href="https://cdn.datatables.net/select/1.3.3/css/select.dataTables.min.css" rel="stylesheet">
     </body>
 <script>
-    $('.display').DataTable({
-      responsive: true,
-        "bPaginate": false,
-        "bLengthChange": false,
-        "bFilter": true,
-        "bInfo": false,
-        columnDefs: [
-           { orderable: false, targets: [-1, -2, -3]}
-        ]
-        });
-        $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+        $(document).ready(function() {
+            $('#myTable1').DataTable({
+              responsive: true,
+              "bPaginate": false,
+                "bLengthChange": false,
+                "bFilter": true,
+                "bInfo": false,
+                columnDefs: [{ 
+                    orderable: false, 
+                    targets: [-1, -2, -3]}]
+            });
+            $('#myTable2').DataTable({
+              responsive: true,
+              "bPaginate": false,
+                "bLengthChange": false,
+                "bFilter": true,
+                "bInfo": false,
+                columnDefs: [{ 
+                    orderable: false, 
+                    targets: [-1]}]
+            });
+            $('#myTable3').DataTable({
+              responsive: true,
+              "bPaginate": false,
+                "bLengthChange": false,
+                "bFilter": true,
+                "bInfo": false,
+                columnDefs: [{ 
+                    orderable: false, 
+                    targets: [-1]}]
+            });
+            $('#myTable4').DataTable({
+              responsive: true,
+              "bPaginate": false,
+                "bLengthChange": false,
+                "bFilter": true,
+                "bInfo": false,
+                columnDefs: [{ 
+                    orderable: false, 
+                    targets: [-1]}]
+            });
+            $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
           $($.fn.dataTable.tables(true)).DataTable().columns.adjust().responsive.recalc();
-        });
+        })
+          });
 
 </script>
 </html>
