--- a/code/app/templates/login.html
+++ b/code/app/templates/login.html
@@ -8,8 +8,8 @@
 <br>
 {{form.username(class="form-control item", placeholder='Username')}}
 {{form.password(class="form-control item", placeholder='Password')}}
-{{form.submit(class="btn btn-block create-account")}}
+{{form.submit(class="btn btn-block create-account", onclick="gtag('event', 'login');")}}
 <br>
 <br>
-Don't have an account? <a href="/register">Register</a>
+Don't have an account? <a href="/register" onclick="gtag('event', 'sign_up');">Register</a>
 {%endblock%}
