swap monthly bar graph to line graph

--- a/code/app/templates/discharge.html
+++ b/code/app/templates/discharge.html
@@ -32,7 +32,7 @@
             <div class="row" style = 'width:65%; height:20%'>
                 <div class="col-md-8">
                     <div class="card-body"><br><br>
-                        <h1 class = 'display-4' style="font-family:Lato;font-weight:400;color:#094d41;text-align:left">Welcome {{username|title}},</h1><br><br>
+                        <h1 class = 'display-4' style="font-family:Lato;font-weight:400;color:#cc3d33;text-align:left">Welcome {{username|title}},</h1><br><br>
                     </div>
                 </div>
                 <div class="col-md-4">
