--- a/code/app/templates/readmission.html
+++ b/code/app/templates/readmission.html
@@ -10,34 +10,48 @@
     <br>
     <br>
     <div class="container">
+        <div class="row text-left">
+            <h1>Re-admission Curated for <p style="display:inline;color:#cc3d33;font-family:Lato;font-weight:500"><strong>Grandma Rudy</strong></p></h1>
+            <h4>Agency: XYZ Home Health Agency</h4>
+        </div>
+        <br><br><br><br>
         <div class="row">
-            <h1>Haoma Re-admission Analytics<br><br></h1>
-            <div class="col-md-6 align-middle">
-                <h2>XYZ Home Health Agency</h2>
+            <div class="col-md-6 align-items-stretch align-middle">
+                <h4><p style="display:inline;color:#cc3d33;font-family:Lato;font-weight:500"><strong>Grandma Rudy's Metric</strong></p></h4>
+                <h5>
+                Female<br>
+                74 years old<br>
+                Services: Nursing</h5>
             </div>
-            <div class="col-md-3 align-middle">
-                <p>How often patients were re-admitted to the hospital for a potentially-preventable condition after discharge from home health?</p>
-            </div>
-            <div class="col-md-3 align-middle text-center">
-                <h1 class="display-1">4.3%</h1>
+            <div class="shadow-lg col-md-6 border d-flex align-items-center">
+                <div class="row">
+                    <span class="align-middle"></span>
+                    <div class="col-md-7"><h2>Potentially Preventable Re-admission Rate</h2></div>
+                    <div class="col-md-4"><h1 class="display-3">4.3%</h1></div>
+                    </span> 
+                </div>
             </div>
         </div>
     </div>
+    <br><br>
 
     
-    <div class="container col-md-12 border">
+    <div class="shadow-sm container border rounded">
         <div class="row">
-                {{gender_hist_graph | safe}}
+            <div class="col-md-7">{{gender_line_graph | safe}}</div>
+            <div class="col-md-5">{{compare_readmission_line_graph | safe}}</div>
         </div>
     </div>
+    <br>
     <div class="container ">
         <div class="row">
-            <div class="col-md-6 d flex border">
+            <div class="shadow-sm col-md-6 d flex border rounded">
                 {{age_hist_graph | safe}}
             </div>
-            <div class="col-md-6 d flex border">
+            <div class="shadow-sm col-md-6 d flex border rounded">
                 {{service_pie_graph | safe}}
             </div>
         </div>
     </div>
+    <br>
 </body>
