added logo to side navi bar

--- a/code/app/templates/dashboard.html
+++ b/code/app/templates/dashboard.html
@@ -11,20 +11,22 @@
 
 <div>
 <body>
+
     <div id="mySidenav" class="sidenav">
         <a id="home" href="{{ url_for('index') }}">
-        <div class="icon"><i class=" ri-home-heart-line" style="font-size:x-large;"></i></div>
-        Home
+        <center><img src="{{ url_for('static', filename='haoma_logo_only.png') }}"  width = '75%' class="img-fluid" alt=""><br></center>
         </a>
         <a id="patients-list" href="{{ url_for('discharge') }}">
-        <div class="icon"><i class="ri-list-check-2" style="font-size:x-large;"></i></div>
-        Patients
+            <div class="icon"><i class="ri-list-check-2" style="font-size:xx-large;"></i></div>
+            <div class = 'text' style='line-height:.05'>Patients</div>
         </a>
         <a id="find-agency" href="{{ url_for('zipcode_search') }}">
-        <div class="icon"><i class="ri-hospital-line" style="font-size:x-large;"></i></div>
-        Agency
+            <div class="icon"><i class="ri-hospital-line" style="font-size:xx-large;"></i></div>
+            <div class = 'text' style='line-height:.05'>Agency</div>
         </a>
     </div>
+    
+    
     <div class="agency-header">   
         <div class="container">
             <div class="row">
