--- a/code/app/static/css/dashboard.css
+++ b/code/app/static/css/dashboard.css
@@ -43,10 +43,9 @@ ul li {
 }
 
 
-#mySidenav a:hover {
-    background-color:#474f4f
+ #mySidenav  a:hover {
+    background-color:#474f4f;
   }
-
 .sidenav {
     position: fixed;
     /* left: -80px; */
@@ -55,20 +54,17 @@ ul li {
     top: 0%;
     width: 100px;
     height: 100%;
-    z-index: 101;
-
-    background-color: #293030;
+    z-index: 1000;
+    background-color:  #293030 ;
   }
-
-/* #user {
+/*  #user  {
     top: 5rem;
-    background-color: #075958;
+    background-color:  #075958 ;
     font-size: 16px;
     width: 150px;
     padding: 10px;
     } */
-
-#mySidenav a{
+ #mySidenav  a{
     position: fixed;
     /* left: -80px; */
     transition: 0.3s;
@@ -82,16 +78,17 @@ ul li {
     color: white;
     box-shadow: lightblue;
     border-radius: 0 5px 5px 0;
-    z-index: 101;
+    z-index: 1000;
     max-height: 4rem;
     }
-#home {
-    top: 10rem;
+ #home  {
+    top: 1rem;
     }
 
-#patients-list {
+ #patients-list  {
+    top: 8rem;
+    }   
+ #find-agency  {
     top: 14rem;
     }   
-#find-agency {
-    top: 18rem;
-    }   
+    
