--- a/code/app/static/css/discharge.css
+++ b/code/app/static/css/discharge.css
@@ -921,10 +921,10 @@ label {
   display: inline-flex; // 1
 }
 
-#mySidenav a:hover {
-    background-color:#474f4f
-  }
 
+ #mySidenav  a:hover {
+    background-color:#474f4f;
+  }
 .sidenav {
     position: fixed;
     /* left: -80px; */
@@ -933,18 +933,17 @@ label {
     top: 0%;
     width: 100px;
     height: 100%;
-    background-color: #293030;
+    z-index: 1000;
+    background-color:  #293030 ;
   }
-
-/* #user {
+/*  #user  {
     top: 5rem;
-    background-color: #075958;
+    background-color:  #075958 ;
     font-size: 16px;
     width: 150px;
     padding: 10px;
     } */
-
-#mySidenav a{
+ #mySidenav  a{
     position: fixed;
     /* left: -80px; */
     transition: 0.3s;
@@ -958,17 +957,17 @@ label {
     color: white;
     box-shadow: lightblue;
     border-radius: 0 5px 5px 0;
-    z-index: 10;
+    z-index: 1000;
     max-height: 4rem;
     }
-#home {
-    top: 10rem;
+ #home  {
+    top: 1rem;
     }
 
-#patients-list {
-    top: 14rem;
+ #patients-list  {
+    top: 8rem;
     }   
-#find-agency {
-    top: 18rem;
+ #find-agency  {
+    top: 14rem;
     }   
     
