--- a/code/app/templates/patient.html
+++ b/code/app/templates/patient.html
@@ -49,20 +49,22 @@
     <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap.min.js"></script><br><br>
     <script src="https://cdn.datatables.net/select/1.3.3/js/dataTables.select.min.js"></script><br><br>
-  <div id="mySidenav" class="sidenav">
-    <a id="home" href="{{ url_for('index') }}">
-    <div class="icon"><i class=" ri-home-heart-line" style="font-size:x-large;"></i></div>
-    Home
-    </a>
-    <a id="patients-list" href="{{ url_for('discharge') }}">
-    <div class="icon"><i class="ri-list-check-2" style="font-size:x-large;"></i></div>
-    Patients
-    </a>
-    <a id="find-agency" href="{{ url_for('zipcode_search') }}">
-    <div class="icon"><i class="ri-hospital-line" style="font-size:x-large;"></i></div>
-    Agency
-    </a>
-  </div>
+
+    <div id="mySidenav" class="sidenav">
+        <a id="home" href="{{ url_for('index') }}">
+        <center><img src="{{ url_for('static', filename='haoma_logo_only.png') }}"  width = '75%' class="img-fluid" alt=""><br></center>
+        </a>
+        <a id="patients-list" href="{{ url_for('discharge') }}">
+            <div class="icon"><i class="ri-list-check-2" style="font-size:xx-large;"></i></div>
+            <div class = 'text' style='line-height:.05'>Patients</div>
+        </a>
+        <a id="find-agency" href="{{ url_for('zipcode_search') }}">
+            <div class="icon"><i class="ri-hospital-line" style="font-size:xx-large;"></i></div>
+            <div class = 'text' style='line-height:.05'>Agency</div>
+        </a>
+    </div>
+    
+    
     <div class="container">
       <div class="header"><br>
        <div class="container">
@@ -85,7 +87,7 @@
                     <div style='border-bottom:1px solid #ccc;'></div>
                 </div>
               </div></div>
-                    <br><br><br>
+                    <br><br>
             <br>
             <div align="left" style="color:#211F1F;font-size:22px">
             <br>Below are top 20 agencies for {{patient.first}} that serve <p style="display:inline;color:#376b69;font-family:Lato;font-weight:400"><strong>{{patient.zipcode}}</strong></p> and offer
