--- a/code/app/templates/patient.html
+++ b/code/app/templates/patient.html
@@ -345,7 +345,8 @@
         });
         $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
           $($.fn.dataTable.tables(true)).DataTable().columns.adjust().responsive.recalc();
-        });    
+        }); 
+</script>   
 
 <script>
     $('.display').DataTable({
