--- a/code/app/templates/zipcode.html
+++ b/code/app/templates/zipcode.html
@@ -2,31 +2,98 @@
 
 {% block content %}
 <html>
-    <head>
   <link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet">
-    </head>
-  <body>
-      <center><br><br><br>
-    <div class="container">
-      <div class="header">
-        <h3 class="text-muted">Haoma Recommendations</h3>
-      </div>
+      <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}">
 
-      <div>
-        <p>Enter Zipcode</p>
-        <input type="text" size="5" name="a" value="94015">
-        
 
-        <p><a href="javascript:void();" id="calculate">Search</a></p>
-         <p></p>
-        <p></p>
-          <span id="elements"></span><br>
-          <table id="a_nice_table"></table>
-      </div>
+          <br><br>
+    <div class="container" style='height:35%'>
+        <div class="row" style = 'width:100%; height:20%'>
+            <div class="col-md-7">
+                <div class="card-body">
+                    <br><br><br><br><br><br><br>
+                    <h1 class = 'display-1' style="font-family:Lato;font-weight:400;color:#094d41;text-align:left">Find Agencies</h1><br><br>
+                </div>
+            </div>
+            <div class="col-md-5">
+                <img src="{{ url_for('static', filename='house-search.png') }}" height="130%" class="card-img-right"><br>
+            </div>
+            <div class="col-sm-12">
+                <br><br>
+                <div style='border-bottom:1px solid #ccc;'></div>
+            </div>
+        </div>
+    </div>
+
+    <body>
+    <div id="mySidenav" class="sidenav">
+        <a id="home" href="{{ url_for('index') }}">
+        <center><img src="{{ url_for('static', filename='haoma_logo_only.png') }}"  width = '75%' class="img-fluid" alt=""><br></center>
+        </a>
+        <a id="patients-list" href="{{ url_for('discharge') }}">
+            <div class="icon"><i class="ri-list-check-2" style="font-size:xx-large;"></i></div>
+            <div class = 'text' style='line-height:.05'>Patients</div>
+        </a>
+        <a id="find-agency" href="{{ url_for('zipcode_search') }}">
+            <div class="icon"><i class="ri-hospital-line" style="font-size:xx-large;"></i></div>
+            <div class = 'text' style='line-height:.05'>Agency</div>
+        </a>
     </div>
     <script src="https://code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>
     <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js" type="text/javascript"></script>
+        <div class="container" height='200%'></div>
+    
+    <div class="container">
+        <div class = 'text' style = 'font-family:Lato;font-size:30px'>Enter Zipcode</div>
+        <p><input type="text" size="7" name="a" value="94015"></p>
+        <a href="javascript:void();" style = 'font-family:Lato;font-size:20px' id="calculate">Search</a>
+        <span id="elements"></span><br>
+        <table id="a_nice_table" class="display table-hover table-striped" ></table>
+    </div>
+        <br><br>
+    
+
+
+    <div class="container" style='height:35%'>
+        <div class = 'text' style = 'font-family:Lato;font-size:30px'>Compare Agencies</div><br>
+            <div class="row" style = 'width:100%; height:20%'>
+                <div class="col-md-4">
+                    <div class = 'text' stsyle = 'font-family:Lato;font-size:20px'>First Agency</div>
+                    <input type="text" size="30" name="b" value="1ST CHOICE HOME HEALTH CARE	">
+                    <a href="javascript:void();" style = 'font-family:Lato;font-size:20px' id="calculate"></a>
+                    <span id="elements"></span><br>
+                </div>
+                <div class="col-md-4">
+                    <div class = 'text' style = 'font-family:Lato;font-size:20px'>Second Agency</div>
+                    <input type="text" size="30" name="c" value="21ST CENTURY HOME HEALTH SERVICES INC.	">
+                    <br>
+                    <a href="javascript:void();" style = 'font-family:Lato;font-size:20px' id="calculate"></a>
+                    <span id="elements"></span><br>
+                </div>
+                <div class="col-md-4">
+                    <div class = 'text' style = 'font-family:Lato;font-size:20px'>Third Agency</div>
+                    <input type="text" size="30" name="d" value="ACCENTCARE HOME HEALTH OF CALIFORNIA, INC	">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="javascript:void();" style = 'font-family:Lato;font-size:20px' id="calculate"><b>Search</b></a>
+                    <span id="elements"></span><br>
+                </div>
+                    
+        </div>
+                
+    </div>
+        
+    </body>
+    
+    
     <script type="text/javascript">
+        
+//         $('b#calculate').bind('click', function() {
+//           $.getJSON('/_get_table', {
+//             a: $('input[name="a"]').val(),
+//             b: $('input[name="b"]').val(),
+//             b: $('input[name="b"]').val()
+//           }
+                    
       $(document).ready(function() {
         var table = null;
         $('a#calculate').bind('click', function() {
@@ -49,7 +116,7 @@
         });
       });
     </script>
-  </body>
+
 </html>
 
 {%endblock%}
