readmission button name change

--- a/code/app/templates/patient.html
+++ b/code/app/templates/patient.html
@@ -165,7 +165,7 @@
                         <i class="bi bi-trash"></i>
                       </button></td>
                       <td><button type="button" class="btn-two white rounded small" style="vertical-align: middle; color: rgb(36, 36, 36);" onclick="window.location.href = '/readmission' ">
-                        Re-admission Analytics
+                        Analytics
                       </button></td>
                       <td class="compare-checkbox align-middle"><input type="checkbox" name="{{row[1]}}"></td>
                       
